# api/server.js
@@ -16,6 +16,7 @@ const ordersRoutes = require('./routes/orders');
 const authRoutes = require('./routes/auth');
 const customersRoutes = require('./routes/customers');
 const addressesRoutes = require('./routes/addresses');
+const companiesRoutes = require('./routes/companies');
 
 const app = express();
 const PORT = process.env.PORT || 3001;
@@ -61,6 +62,7 @@ app.use('/api/orders', ordersRoutes);
 app.use('/api/auth', authRoutes);
 app.use('/api/customers', customersRoutes);
 app.use('/api/addresses', addressesRoutes);
+app.use('/api/companies', companiesRoutes);
 
 // 404 handler
 app.use((req, res) => {
